src/test/deca/context/invalid/tests/FieldTYpeVoid.deca
// Description:
//       field de type void
//
// Resultats: 
//      Ligne 11: Déclaration de Field de type void impossible
// 
// Historique:
//      cree le 20/01/2023

class A{
   void x;
}

